ProFit/objects/Error_Log__c.object
<CustomObject>
    <description>Error Log for Pro Fit App</description>
    <fields>
        <fullName>Log_Date_Time__c</fullName>
        <description>Error Logs date and time</description>
        <label>Log Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Log_Details__c</fullName>
        <description>Error Log Description</description>
        <inlineHelpText>Error Log Description</inlineHelpText>
        <label>Log Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <description>The Name of either Apex Class or Apex Trigger</description>
        <inlineHelpText>The Name of either Apex Class or Apex Trigger</inlineHelpText>
        <label>Process Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ERR-{00000000}</displayFormat>
        <label>Error Logs Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>